IaC/jenkins-sonarqube/202.ec2-jenkins-node-sg.tf
resource "aws_security_group" "ec2_jenkins_node_sg" {
  name   = "${local.environment}-sg-jenkins-node"
  vpc_id = module.vpc.vpc_id

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "${local.environment}-sg-jenkins-node"
  }

}
